:lipstick: fix address autocomplete z-index (#13)

--- a/src/components/form/renderField.css
+++ b/src/components/form/renderField.css
@@ -29,6 +29,10 @@
   margin-top: 0.3em;
 }
 
+.form-label .input-autocomplete {
+  z-index: 1;
+}
+
 @media screen and (max-width: 640px) {
   .form-label {
     display: block;
